# pytorch

./: CMakeLists.txt
aten/src/ATen/core/: interned_strings.h  jit_type.h  type.cpp
benchmarks/tensorexpr/: benchmark.py  broadcast.py  elementwise.py  framework.py  pt_engine.py
caffe2/: CMakeLists.txt
test/: test_jit.py  test_jit_fuser.py  test_tensorexpr.py
test/cpp/jit/: test_argument_spec.cpp  tests.h
test/cpp/tensorexpr/: gtest.cpp  padded_buffer.cpp  padded_buffer.h  test_asmjit.cpp  test_aten.cpp  test_base.h  test_cuda.cpp  test_expr.cpp  test_ir_printer.cpp  test_llvm.cpp  test_reductions.cpp  test_schedule.cpp  test_simplify.cpp  test_type.cpp  test_utils.h  tests.h
tools/: build_variables.bzl  build_variables.py
torch/csrc/jit/codegen/fuser/: compiler.cpp  interface.cpp
torch/csrc/jit/compiler/include/: eval.h  ir.h  ir_printer.h  ir_visitor.h  llvm_codegen.h
torch/csrc/jit/compiler/src/: ir_mutator.cc  ir_printer.cc  ir_visitor.cc  llvm_codegen.cc
torch/csrc/jit/compiler/tests/: llvm_test.cc
torch/csrc/jit/frontend/: schema_type_parser.cpp
torch/csrc/jit/passes/: guard_elimination.cpp  tensorexpr_fuser.cpp  tensorexpr_fuser.h
torch/csrc/jit/python/: init.cpp
torch/csrc/jit/runtime/: argument_spec.h  interpreter.cpp  interpreter.h  profiling_graph_executor_impl.cpp  profiling_record.cpp  profiling_record.h  register_prim_ops.cpp
torch/csrc/jit/tensorexpr/: CMakeLists.txt  asmjit_codegen.cpp  asmjit_codegen.h  buffer.h  codegen.cpp  codegen.h  constant_folder.h  cuda_codegen.cpp  cuda_codegen.h  cuda_half_support.h  eval.h  exceptions.h  execution_counter.h  expr.cpp  expr.h  function.cpp  function.h  ir.cpp  ir.h  ir_mutator.cpp  ir_mutator.h  ir_printer.cpp  ir_printer.h  ir_simplifier.cpp  ir_visitor.cpp  ir_visitor.h  kernel.cpp  kernel.h  llvm_codegen.cpp  llvm_codegen.h  llvm_jit.cpp  llvm_jit.h  loopnest.cpp  loopnest.h  refcount.h  schedule.cpp  schedule.h  stmt.h  tensor.cpp  tensor.h  (+4 more)
torch/csrc/jit/tensorexpr/tests/: asmjit_test.cpp  aten_test.cpp  cuda_test.cpp  expr_test.cpp  ir_printer_test.cpp  llvm_test.cpp  padded_buffer.cpp  padded_buffer.h  schedule_test.cpp  test_utils.h  tests.py
